create event for messages

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,17 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
+
+    const form = document.getElementById('form')
+    const input = document.getElementById('input')
+
+    form.addEventListener('submit', event => {
+        event.preventDefault()
+        if (input.value) {
+            socket.emit('chat message', input.value)
+            input.value = ''
+        }
+    })
   </script>
 </body>
 </html>
