--- a/public/chat.html
+++ b/public/chat.html
@@ -50,7 +50,7 @@
       <div class="chat-form-container">
         <form id="chat-form">
           <input
-            id="msg"
+            id="message"
             type="text"
             placeholder="Enter Message"
             required
@@ -60,7 +60,7 @@
         </form>
       </div>
     </div>
-  
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
   </html>
