--- a/public/chat.html
+++ b/public/chat.html
@@ -30,22 +30,7 @@
             <li>Mike</li>
           </ul>
         </div>
-        <div class="chat-messages">
-                      <div class="message">
-                          <p class="meta">Brad <span>9:12pm</span></p>
-                          <p class="text">
-                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                              repudiandae.
-                          </p>
-                      </div>
-                      <div class="message">
-                          <p class="meta">Mary <span>9:15pm</span></p>
-                          <p class="text">
-                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                              repudiandae.
-                          </p>
-                      </div>
-        </div>
+        <div class="chat-messages"></div>
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
@@ -60,6 +45,7 @@
         </form>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.10.1/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
