--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             <option value="Technology">Technology</option>
           </select>
         </div>
-        <button type="submit" class="btn">Join Room <i class="fas fa-sign-in-alt"></i></button>
+        <button type="submit" class="btn">Join Room</button>
       </form>
     </main>
   </div>
